; ModuleID = '/home/carl/AnghaBench/RetroArch/deps/pthreads/extr_pte.c_pte_rwlock_check_need_init.c'
source_filename = "/home/carl/AnghaBench/RetroArch/deps/pthreads/extr_pte.c_pte_rwlock_check_need_init.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@pte_rwlock_test_init_lock = common dso_local global i32 0, align 4
@PTHREAD_RWLOCK_INITIALIZER = common dso_local global i32* null, align 8
@EINVAL = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @pte_rwlock_check_need_init(i32** %0) #0 {
  %2 = alloca i32**, align 8
  %3 = alloca i32, align 4
  store i32** %0, i32*** %2, align 8
  store i32 0, i32* %3, align 4
  %4 = load i32, i32* @pte_rwlock_test_init_lock, align 4
  %5 = call i32 @pte_osMutexLock(i32 %4)
  %6 = load i32**, i32*** %2, align 8
  %7 = load i32*, i32** %6, align 8
  %8 = load i32*, i32** @PTHREAD_RWLOCK_INITIALIZER, align 8
  %9 = icmp eq i32* %7, %8
  br i1 %9, label %10, label %13

10:                                               ; preds = %1
  %11 = load i32**, i32*** %2, align 8
  %12 = call i32 @pthread_rwlock_init(i32** %11, i32* null)
  store i32 %12, i32* %3, align 4
  br label %20

13:                                               ; preds = %1
  %14 = load i32**, i32*** %2, align 8
  %15 = load i32*, i32** %14, align 8
  %16 = icmp eq i32* %15, null
  br i1 %16, label %17, label %19

17:                                               ; preds = %13
  %18 = load i32, i32* @EINVAL, align 4
  store i32 %18, i32* %3, align 4
  br label %19

19:                                               ; preds = %17, %13
  br label %20

20:                                               ; preds = %19, %10
  %21 = load i32, i32* @pte_rwlock_test_init_lock, align 4
  %22 = call i32 @pte_osMutexUnlock(i32 %21)
  %23 = load i32, i32* %3, align 4
  ret i32 %23
}

declare dso_local i32 @pte_osMutexLock(i32) #1

declare dso_local i32 @pthread_rwlock_init(i32**, i32*) #1

declare dso_local i32 @pte_osMutexUnlock(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
